refactor(api): ♻️ 优化代码逻辑，统一使用getFirst()方法
在多个策略处理类中，将对列表的访问方式从get(0)替换为getFirst()，提升代码一致性和可读性。此变更简化了获取首个元素的逻辑，减少了对外部库的依赖，增强了代码的可维护性。