@@ -1,11 +1,7 @@
 package com.datasophon.api.strategy;
 
-import cn.hutool.core.util.ObjUtil;
 import com.datasophon.api.load.GlobalVariables;
 import com.datasophon.api.utils.ProcessUtils;
-import com.datasophon.common.model.ServiceConfig;
-import com.datasophon.common.model.ServiceRoleInfo;
-import com.datasophon.dao.entity.ClusterServiceRoleInstanceEntity;
 
 import java.util.List;
 import java.util.Map;
@@ -15,9 +11,9 @@ public class OpenldapHandlerStrategy implements ServiceRoleStrategy {
     public void handler(Integer clusterId, List<String> hosts) {
         Map<String, String> globalVariables = GlobalVariables.get(clusterId);
         if (!hosts.isEmpty()) {
-            ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${openldapAddr}", "ldap://" + hosts.get(0) + ":389");
-            ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${syncLdapUrl}", "ldap://" + hosts.get(0) + ":389");
-            ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${openldapIp}", hosts.get(0));
+            ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${openldapAddr}", "ldap://" + hosts.getFirst() + ":389");
+            ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${syncLdapUrl}", "ldap://" + hosts.getFirst() + ":389");
+            ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${openldapIp}", hosts.getFirst());
             ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${syncLdapBindDn}", "cn=root,dc=ldap,dc=com");
             ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${syncLdapBindPassword}", "123456");
             ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${syncLdapSearchBase}", "dc=ldap,dc=com");
