@@ -2,10 +2,7 @@ package com.datasophon.api.strategy;
 
 import com.datasophon.api.load.GlobalVariables;
 import com.datasophon.api.utils.ProcessUtils;
-import com.datasophon.common.model.ServiceConfig;
 import com.datasophon.common.model.ServiceRoleInfo;
-import com.datasophon.common.utils.HostUtils;
-import com.datasophon.dao.entity.ClusterServiceRoleInstanceEntity;
 
 import java.util.List;
 import java.util.Map;
@@ -17,7 +14,7 @@ public class PostgresqlHandlerStrategy implements ServiceRoleStrategy {
         Map<String, String> globalVariables = GlobalVariables.get(clusterId);
         if (hosts.size() == 1) {
             ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${PostgresqlMaster}",
-                    hosts.get(0));
+                    hosts.getFirst());
         }
     }
 
