@@ -2,9 +2,6 @@ package com.datasophon.api.strategy;
 
 import com.datasophon.api.load.GlobalVariables;
 import com.datasophon.api.utils.ProcessUtils;
-import com.datasophon.common.model.ServiceConfig;
-import com.datasophon.common.model.ServiceRoleInfo;
-import com.datasophon.dao.entity.ClusterServiceRoleInstanceEntity;
 
 import java.util.List;
 import java.util.Map;
@@ -15,7 +12,7 @@ public class PushgatewayHandlerStrategy implements ServiceRoleStrategy {
     public void handler(Integer clusterId, List<String> hosts) {
         if (hosts.size() == 1) {
             Map<String, String> variables = GlobalVariables.get(clusterId);
-            ProcessUtils.generateClusterVariable(variables, clusterId, "${pushgatewayHost}", hosts.get(0));
+            ProcessUtils.generateClusterVariable(variables, clusterId, "${pushgatewayHost}", hosts.getFirst());
         }
     }
 
