@@ -3,9 +3,6 @@ package com.datasophon.api.strategy;
 import cn.hutool.core.collection.CollUtil;
 import com.datasophon.api.load.GlobalVariables;
 import com.datasophon.api.utils.ProcessUtils;
-import com.datasophon.common.model.ServiceConfig;
-import com.datasophon.common.model.ServiceRoleInfo;
-import com.datasophon.dao.entity.ClusterServiceRoleInstanceEntity;
 
 import java.util.List;
 import java.util.Map;
@@ -15,7 +12,7 @@ public class RedisSentinelMasterHandlerStrategy implements ServiceRoleStrategy{
     public void handler(Integer clusterId, List<String> hosts) {
         Map<String, String> globalVariables = GlobalVariables.get(clusterId);
         if (CollUtil.isNotEmpty(hosts)) {
-            ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${redisSentinelMasterHost}", hosts.get(0));
+            ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${redisSentinelMasterHost}", hosts.getFirst());
         }
     }
 
