@@ -19,11 +19,9 @@
 
 package com.datasophon.api.strategy;
 
+import cn.hutool.core.collection.CollUtil;
 import com.datasophon.api.load.GlobalVariables;
 import com.datasophon.api.utils.ProcessUtils;
-import com.datasophon.common.model.ServiceConfig;
-import com.datasophon.common.model.ServiceRoleInfo;
-import com.datasophon.dao.entity.ClusterServiceRoleInstanceEntity;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.List;
@@ -42,8 +40,8 @@ public class TSHandlerStrategy implements ServiceRoleStrategy {
     @Override
     public void handler(Integer clusterId, List<String> hosts) {
         Map<String, String> globalVariables = GlobalVariables.get(clusterId);
-        if(hosts.size() > 0) {
-            ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${yarn_timeline_server}", hosts.get(0));
+        if(CollUtil.isNotEmpty(hosts)) {
+            ProcessUtils.generateClusterVariable(globalVariables, clusterId, "${yarn_timeline_server}", hosts.getFirst());
         }
     }
 
